--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,11 @@
 <h1>Categories#index</h1>
 <p>Find me in app/views/categories/index.html.erb</p>
+
+<% @categories.each do |category| %>
+  <div class="container">
+    <p> <%= category.name %> </p>
+    <%= link_to "Edit", edit_category_path(category) %>
+  </div>
+<% end %>
+
+<%= link_to "New category", new_category_path %>
