--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,6 +5,7 @@
   <div class="container">
     <p> <%= category.name %> </p>
     <%= link_to "Edit", edit_category_path(category) %>
+    <%= link_to "Delete", category_path(category), data: { turbo_method: :delete } %>
   </div>
 <% end %>
 
