Adding variables of styles

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,9 +2,12 @@
 
 // For example:
 $red: #FD1015;
-$blue: #0D6EFD;
 $yellow: #FFC65A;
 $orange: #E67E22;
-$green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+$blue: #2D4054;
+$violet: #C399F2;
+$green: #B0F451;
+$white: #FFFFFF;
+$black: #000000;
