--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,13 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body><%= render "shared/navbar" %>
-<%= render "shared/flashes" %>
-
-    <%= yield %>
+  <body>
+  <%= render "shared/navbar" %>
+  <%= render "shared/banner" %>
+  <%= render "shared/flashes" %>
+    <div class='container mt-5 mb-5'>
+      <%= yield %>
+    </div>
+  <%= render "shared/footer" %>
   </body>
 </html>
