--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,43 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner">
+  <div class="banner-content mt-5">
 
-<div>
-  <div class="container">
-    <% if user_signed_in? %>
-      <%= link_to "Create new account", new_account_path %>
-    <% else %>
-      <%= link_to "Regístrate", new_user_registration_path, class: "btn" %>
-    <% end %>
+    <h1 class="text-center">Budget App</h1>
+    <p class="text-center justify-content-center m-5" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, porro. Incidunt veritatis id maxime expedita ducimus repudiandae repellat quasi harum beatae eveniet obcaecati magnam natus cupiditate nesciunt inventore, qui sequi?
+    Praesentium natus consequuntur labore voluptatem provident id modi recusandae, minus sequi adipisci, pariatur rem ipsum assumenda corrupti tenetur culpa cupiditate earum, explicabo incidunt voluptates aperiam a unde molestiae molestias. Necessitatibus?
+    Recusandae commodi a modi sequi ipsum quisquam facilis ad aperiam earum at iste, laboriosam perspiciatis distinctio libero aliquid ea iusto fugiat! Et numquam cumque maxime animi suscipit esse unde laborum?
+    Soluta beatae aut nostrum necessitatibus. Ullam reprehenderit quae assumenda impedit, soluta natus ipsa minus similique sed quisquam provident perferendis sapiente tenetur debitis magni amet velit voluptas libero nihil aperiam quidem.
+    Quas minus quibusdam dignissimos beatae possimus nulla similique recusandae adipisci odit. Sequi perferendis culpa, accusamus ipsum porro veritatis id placeat soluta, dignissimos et laboriosam repudiandae dicta voluptatum quibusdam enim eum!
+    Molestias velit natus animi doloribus ad, voluptatum ex maiores culpa molestiae veniam excepturi rem, exercitationem doloremque illum dolorem commodi similique ratione voluptate? Fuga maxime quos vitae, unde laudantium nemo facere.
+    Quasi perferendis commodi vel earum modi sunt laborum dolore iusto voluptatum nostrum voluptas nulla quos possimus, animi aut rem labore unde non maiores optio in tenetur illo ipsam? Atque, dolore.
+    Ipsam tempore corrupti delectus temporibus, ex odio sapiente, earum illum consequuntur cumque repellendus perspiciatis ducimus impedit quaerat dolorem officiis ipsum saepe ullam! Rem, rerum repellendus saepe unde possimus modi sint.
+    Nam quia, est quod sequi rerum tempora recusandae laborum quo at fugiat! Necessitatibus mollitia ratione reiciendis quaerat numquam asperiores, quos aperiam facilis. Autem eos nesciunt explicabo nemo nulla reiciendis culpa.
+    Consequuntur delectus harum voluptate minus repellendus nulla explicabo expedita nam et ea consequatur labore atque totam, in deserunt similique provident debitis aperiam. Voluptate quia hic autem nobis facilis eligendi nesciunt!</p>
+  <div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            Imagen 1
+          </div>
+          <div class="col">
+            Imagen 2
+          </div>
+          <div class="col">
+            Imagen 3
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            Imagen 4
+          </div>
+          <div class="col">
+            Imagen 5
+          </div>
+          <div class="col">
+            Imagen 6
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
