--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,6 +11,25 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto">
           <% if user_signed_in? %>
+
+            <li class="nav-item dropdown">
+              <%# <p class="nav-link dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Categories </p> %>
+              <%= link_to "Categories", "#", class: "nav-link", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+              <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <%= link_to "Action", "#", class: "dropdown-item" %>
+                <%= link_to "Another action", "#", class: "dropdown-item" %>
+                <% Category.all.each do |category| %>
+                    <div class="col-6">
+                      <%= link_to category.name, "#", class: "dropdown-item" %>
+                    </div>
+                    <div class="col-6">
+                      <i class="fa-solid fa-pen"></i>
+                      <i class="fa-solid fa-trash"></i>
+                    </div>
+                <% end %>
+              </div>
+            </li>
+
             <li class="nav-item active">
               <%= link_to "Home", "#", class: "nav-link" %>
             </li>
