--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Accounts#edit</h1>
-<p>Find me in app/views/accounts/edit.html.erb</p>
+<div class="contain-img">
+  <h1 class="my-5">Oferta tus productos aquí:</h1>
+  <%= render "shared/account_form" %>
+</div>
