--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,7 +3,7 @@
 
 <% @categories.each do |category| %>
   <div class="container">
-    <p> <%= category.name %> </p>
+    <p> <%= category.name %> is a <%= category.category_type %> </p>
     <%= link_to "Edit", edit_category_path(category) %>
     <%= link_to "Delete", category_path(category), data: { turbo_method: :delete } %>
   </div>
