--- a/app/views/shared/_account_form.html.erb
+++ b/app/views/shared/_account_form.html.erb
@@ -2,7 +2,8 @@
   <%= simple_form_for @account do |f| %>
     <%= f.input :name, placeholder: "Account Name" %>
     <%= f.input :amount, placeholder:  "Add Amount"  %>
-    <%= f.select :account_type, Account.account_types.values.map { |value| value.to_i }, placeholder: "Account's Type"  %>
+    <%# <%= f.select :account_type, Account.account_types.values.map { |value| value.to_i }, placeholder: "Account's Type"  %> %>
+    <%= f.input :account_type, placeholder: "Account's Type", collection: Account.account_types.symbolize_keys.keys%>
     <%= f.button :submit %>
   <% end %>
 </div>
