--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -2,7 +2,7 @@
 <p>Find me in app/views/transactions/index.html.erb</p>
 <% @transactions.each do |transaction| %>
   <div class="container">
-    <p> <%= transaction.name %> is a <%= transaction.transaction_type %> </p>
+    <p> <%= transaction.reason %> is a <%= transaction.transaction_type %>: <%= transaction.amount %> </p>
     <%= link_to "Edit", edit_transaction_path(transaction) %>
     <%= link_to "Delete", transaction_path(transaction), data: { turbo_method: :delete } %>
   </div>
