--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,7 +1,8 @@
 <h1>Transactions#index</h1>
 <p>Find me in app/views/transactions/index.html.erb</p>
+
 <% @transactions.each do |transaction| %>
-  <div class="container">
+  <div class="container mt-3 mb-3">
     <p> <%= transaction.reason %> is a <%= transaction.transaction_type %>: <%= transaction.amount %> </p>
     <%= link_to "Edit", edit_transaction_path(transaction) %>
     <%= link_to "Delete", transaction_path(transaction), data: { turbo_method: :delete } %>
