--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,9 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :full_name,
+                required: true,
+                input_html: { autocomplete: "full-name" }%>
   </div>
 
   <div class="form-actions">
