--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,8 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background: $blue;
+  height: 80px;
+  border-bottom: 1px solid white;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -9,4 +11,47 @@
 
 .navbar-lewagon .navbar-brand img {
   width: 40px;
+}
+
+.nav-link {
+  color: white;
+  font-weight: bold;
+}
+
+.dropdown-item {
+  color: white;
+  font-weight: bold;
+  margin: 0 20px;
+}
+
+.nav-link:hover {
+  color: gray;
+}
+
+.dropdown-item:hover {
+  color: gray;
+}
+
+.box {
+  border: 1px solid $violet ;
+  background-color: $violet ;
+  border-radius: 20px;
+  font-weight: bolder;
+  margin: 0 10px;
+}
+
+#navbarSupportedContent {
+  margin: 0 30px;
+}
+
+.navbar-brand {
+  margin: 0 30px;
+}
+
+#NavBox {
+  background-color: $blue;
+}
+
+.avatar {
+  margin: 0 30px;
 }
