--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,12 +1,26 @@
-<h1>Categories#index</h1>
-<p>Find me in app/views/categories/index.html.erb</p>
+<div class="container">
+  <div class="row justify-content-center">
+    <h1>Categories#index</h1>
+    <p>Find me in app/views/categories/index.html.erb</p>
 
-<% @categories.each do |category| %>
-  <div class="container mt-3 mb-3">
-    <p> <%= category.name %> is a <%= category.category_type %> </p>
-    <%= link_to "Edit", edit_category_path(category) %>
-    <%= link_to "Delete", category_path(category), data: { turbo_method: :delete } %>
-  </div>
-<% end %>
-
-<%= link_to "New category", new_category_path %>
+      <table>
+        <thead>
+          <tr>
+            <td>Name</td>
+            <td>Type</td>
+            <td>Action</td>
+          </tr>
+        </thead>
+        <tbody>
+          <% @categories.each do |category| %>
+            <tr>
+              <td><%= category.name %></td>
+              <td><%= category.category_type %></td>
+              <td><%= link_to "Edit", edit_category_path(category) %> or <%= link_to "Delete", category_path(category), data: { turbo_method: :delete } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    <%= link_to "New category", new_category_path %>
+ </div>
+</div>
