--- a/app/views/shared/_transactions_form.html.erb
+++ b/app/views/shared/_transactions_form.html.erb
@@ -1,9 +1,15 @@
-<%= simple_form_for @transaction do |f| %>
-  <%= f.input :transaction_type, placeholder: "Transaction's Type", collection: Transaction.transaction_types.symbolize_keys.keys %>
-  <%= f.input :reason, placeholder: "Reason of payment" %>
-  <%= f.input :date, placeholder:  "Date" %>
-  <%= f.input :amount, placeholder:  "Add Amount" %>
-  <%= f.input :account_id, placeholder: "Select account", collection: current_user.accounts %>
-  <%= f.input :category_id, placeholder: "Select category", collection: current_user.categories %>
-  <%= f.button :submit %>
-<% end %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-5">
+      <%= simple_form_for @transaction do |f| %>
+        <%= f.input :transaction_type, placeholder: "Transaction's Type", collection: Transaction.transaction_types.symbolize_keys.keys %>
+        <%= f.input :reason, placeholder: "Reason of payment" %>
+        <%= f.input :date, placeholder: "Date", html5: true %>
+        <%= f.input :amount, placeholder: "Add Amount" %>
+        <%= f.input :account_id, placeholder: "Select account", collection: current_user.accounts %>
+        <%= f.input :category_id, placeholder: "Select category", collection: current_user.categories %>
+        <%= f.button :submit %>
+      <% end %>
+    </div>
+  </div>
+</div>
