--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,11 @@
 <div class="banner">
-  <div class="banner-content mt-5">
-
-    <h1 class="text-center">Budget App</h1>
-    <p class="text-center justify-content-center m-5" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, porro. Incidunt veritatis id maxime expedita ducimus repudiandae repellat quasi harum beatae eveniet obcaecati magnam natus cupiditate nesciunt inventore, qui sequi?
-    Praesentium natus consequuntur labore voluptatem provident id modi recusandae, minus sequi adipisci, pariatur rem ipsum assumenda corrupti tenetur culpa cupiditate earum, explicabo incidunt voluptates aperiam a unde molestiae molestias. Necessitatibus?
-    Recusandae commodi a modi sequi ipsum quisquam facilis ad aperiam earum at iste, laboriosam perspiciatis distinctio libero aliquid ea iusto fugiat! Et numquam cumque maxime animi suscipit esse unde laborum?
-    Soluta beatae aut nostrum necessitatibus. Ullam reprehenderit quae assumenda impedit, soluta natus ipsa minus similique sed quisquam provident perferendis sapiente tenetur debitis magni amet velit voluptas libero nihil aperiam quidem.
-    Quas minus quibusdam dignissimos beatae possimus nulla similique recusandae adipisci odit. Sequi perferendis culpa, accusamus ipsum porro veritatis id placeat soluta, dignissimos et laboriosam repudiandae dicta voluptatum quibusdam enim eum!
-    Molestias velit natus animi doloribus ad, voluptatum ex maiores culpa molestiae veniam excepturi rem, exercitationem doloremque illum dolorem commodi similique ratione voluptate? Fuga maxime quos vitae, unde laudantium nemo facere.
-    Quasi perferendis commodi vel earum modi sunt laborum dolore iusto voluptatum nostrum voluptas nulla quos possimus, animi aut rem labore unde non maiores optio in tenetur illo ipsam? Atque, dolore.
-    Ipsam tempore corrupti delectus temporibus, ex odio sapiente, earum illum consequuntur cumque repellendus perspiciatis ducimus impedit quaerat dolorem officiis ipsum saepe ullam! Rem, rerum repellendus saepe unde possimus modi sint.
-    Nam quia, est quod sequi rerum tempora recusandae laborum quo at fugiat! Necessitatibus mollitia ratione reiciendis quaerat numquam asperiores, quos aperiam facilis. Autem eos nesciunt explicabo nemo nulla reiciendis culpa.
-    Consequuntur delectus harum voluptate minus repellendus nulla explicabo expedita nam et ea consequatur labore atque totam, in deserunt similique provident debitis aperiam. Voluptate quia hic autem nobis facilis eligendi nesciunt!</p>
-  <div>
-      <% if user_signed_in? %>
+  <div class="home-container">
+    <div class="home-text">
+      <p>Take better control of your finances and achieve the savings you so desire!</p>
+      <img src='images/credit-card.jpg' alt="tarjeta de credito">
+    </div>
+  </div>
+      <!-- <% if user_signed_in? %>
         <div class="container">
           <div class="row">
             <div class="col">
@@ -49,5 +41,5 @@
         <h2>Inicie Sesión o Registrese</h2>
       <% end %>
     </div>
-  </div>
+  </div> -->
 </div>
