--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
 
   <body>
   <%= render "shared/navbar" %>
-  <%# <%= render "shared/banner" %> %>
+  <%# <%= render "shared/banner" %>
   <%= render "shared/flashes" %>
-    <div class='container mt-5 mb-5'>
+    <div>
       <%= yield %>
     </div>
   <%= render "shared/footer" %>
