--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
         <ul class="navbar-nav me-auto">
           <% if user_signed_in? %>
 
-            <li class="nav-item dropdown">
+            <!-- <li class="nav-item dropdown">
               <%# <p class="nav-link dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Categories </p> %>
               <%= link_to "Categories", "#", class: "nav-link", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
@@ -28,10 +28,19 @@
                     </div>
                 <% end %>
               </div>
-            </li>
+            </li> -->
 
             <li class="nav-item active">
               <%= link_to "Home", "#", class: "nav-link" %>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Messages</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Messages</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Messages</a>
             </li>
             <li class="nav-item dropdown">
               <%= image_tag "https://cdn-icons-png.flaticon.com/512/4675/4675250.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
