--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="home-container">
     <div class="home-text">
       <p>Take better control of your finances and achieve the savings you so desire!</p>
-      <img src='images/credit-card.jpg' alt="tarjeta de credito">
+      <!--<img src='images/credit-card.jpg' alt="tarjeta de credito"> -->
     </div>
   </div>
       <!-- <% if user_signed_in? %>
