--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-center">
-    <h1>Accounts#index</h1>
+    <h1 class="m-5">Your Accounts</h1>
 
     <table>
       <thead>
@@ -22,6 +22,12 @@
         <% end %>
       </tbody>
     </table>
-    <%= link_to "New account", new_account_path %>
+    <div class="row justify-content-center p-1">
+      <div class="col-4">
+        <div class="btn-violet m-5 p-2">
+          <%= link_to "New account", new_account_path %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
