--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,26 +1,29 @@
 <div class="container">
   <div class="row justify-content-center">
-    <h1>Categories#index</h1>
-    <p>Find me in app/views/categories/index.html.erb</p>
-
-      <table>
-        <thead>
+    <h1 class="m-5">Your Categories</h1>
+    <table>
+      <thead>
+        <tr>
+          <td>Name</td>
+          <td>Type</td>
+          <td>Action</td>
+        </tr>
+      </thead>
+      <tbody>
+        <% @categories.each do |category| %>
           <tr>
-            <td>Name</td>
-            <td>Type</td>
-            <td>Action</td>
+            <td><%= category.name %></td>
+            <td><%= category.category_type %></td>
+            <td><%= link_to "Edit", edit_category_path(category) %> or <%= link_to "Delete", category_path(category), data: { turbo_method: :delete } %></td>
           </tr>
-        </thead>
-        <tbody>
-          <% @categories.each do |category| %>
-            <tr>
-              <td><%= category.name %></td>
-              <td><%= category.category_type %></td>
-              <td><%= link_to "Edit", edit_category_path(category) %> or <%= link_to "Delete", category_path(category), data: { turbo_method: :delete } %></td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
-    <%= link_to "New category", new_category_path %>
- </div>
+        <% end %>
+      </tbody>
+    </table>
+    <div class="row justify-content-center p-1">
+      <div class="col-4">
+        <div class="btn-violet m-5 p-2">
+          <%= link_to "New category", new_category_path %>
+      </div>
+    </div>
+  </div>
 </div>
