--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,16 +31,16 @@
             </li> -->
 
             <li class="nav-item active">
-              <%= link_to "Home", "#", class: "nav-link" %>
+              <%= link_to "Home", "/", class: "nav-link" %>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Messages</a>
+              <a class="nav-link" href="/accounts">Accounts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Messages</a>
+              <a class="nav-link" href="/categories">Categories</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Messages</a>
+              <a class="nav-link" href="/transactions">Transactions</a>
             </li>
             <li class="nav-item dropdown">
               <%= image_tag "https://cdn-icons-png.flaticon.com/512/4675/4675250.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
