--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,9 +1,6 @@
 <div class="container">
-  <div class="row justify-content-center">
-
-    <h1>Transactions#index</h1>
-    <p>Find me in app/views/transactions/index.html.erb</p>
-
+  <div class="row justify-content-center p-5">
+    <h1 class="mb-5">Your Transactions:</h1>
     <table>
       <thead>
         <tr>
@@ -28,7 +25,12 @@
         <% end %>
       </tbody>
     </table>
-
-    <%= link_to "New transaction", new_transaction_path %>
+    <div class="row justify-content-center p-1">
+      <div class="col-4">
+        <div class="btn-violet m-5 p-2">
+          <%= link_to "New transaction", new_transaction_path %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
