--- a/app/assets/stylesheets/components/_btn-violet.scss
+++ b/app/assets/stylesheets/components/_btn-violet.scss
@@ -3,7 +3,11 @@
   background-color: $violet ;
   border-radius: 20px;
   font-weight: bolder;
-  margin: 0 10px;
+  margin: 30px 0;
+  padding: 10px 20px;
   color: white;
   border-radius: 10px;
+  text-decoration: none;
+  text-align: center;
+  justify-content: center !important;
 }
