--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-center p-5">
-    <h1 class="mb-5">Your Transactions:</h1>
+    <h1 class="mb-5">Your Transactions</h1>
     <table>
       <thead>
         <tr>
@@ -25,12 +25,6 @@
         <% end %>
       </tbody>
     </table>
-    <div class="row justify-content-center p-1">
-      <div class="col-4">
-        <div class="btn-violet m-5 p-2">
-          <%= link_to "New transaction", new_transaction_path %>
-        </div>
-      </div>
-    </div>
+    <%= button_to "New transaction", new_transaction_path, class:"btn-violet", method: :get %>
   </div>
 </div>
