--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -25,6 +25,8 @@
         <% end %>
       </tbody>
     </table>
-    <%= button_to "New transaction", new_transaction_path, class:"btn-violet", method: :get %>
+    <div class="d-flex justify-content-center">
+      <%= button_to "New transaction", new_transaction_path, class:"btn-violet", method: :get %>
+    </div>
   </div>
 </div>
