--- a/app/assets/stylesheets/components/_form-container.scss
+++ b/app/assets/stylesheets/components/_form-container.scss
@@ -5,5 +5,6 @@
   border-radius: 20px !important;
   padding: 60px;
   color: black;
-  margin-bottom: 50%;
+  margin-bottom: 50px;
+  margin-top: 50px;
 }
