--- a/app/assets/stylesheets/components/_table.scss
+++ b/app/assets/stylesheets/components/_table.scss
@@ -1,9 +1,3 @@
-// *{
-//   margin:0;
-//   padding: 0;
-//   outline: 0;
-//  }
-
 table {
 //   position: absolute;
 //   z-index: 2;
@@ -18,14 +12,13 @@ table {
 //   overflow: hidden;
   background-color: #2D4054;
   color: white;
-  border: 1px solid rgba(255, 255, 255, 0.7);
+  border: 0px;
   border-color: white;
-  border-radius: 20px;
  }
 
 thead {
   background-color: rgba(255, 255, 255, 0.4);
-  border-radius: 5px;
+  // border-collapse: collapse !important;
 }
 
 td , th{
