--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -5,10 +5,10 @@
     <table>
       <thead>
         <tr>
-          <td>Name</td>
-          <td>Type</td>
-          <td>Amount</td>
-          <td>Action</td>
+          <th>Name</th>
+          <th>Type</th>
+          <th>Amount</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody>
@@ -22,11 +22,8 @@
         <% end %>
       </tbody>
     </table>
-    <div class="row justify-content-center p-1">
-      <div class="col-4">
-        <div class="btn-violet m-5 p-2">
-          <%= link_to "New account", new_account_path %>
-        </div>
+      <div class="d-flex justify-content-center">
+        <%= button_to "New account", new_account_path, class:"btn-violet", method: :get %>
       </div>
     </div>
   </div>
