--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -20,10 +20,8 @@
       </tbody>
     </table>
     <div class="row justify-content-center p-1">
-      <div class="col-4">
-        <div class="btn-violet m-5 p-2">
-          <%= link_to "New category", new_category_path %>
+      <div class="d-flex justify-content-center">
+        <%= button_to "New category", new_category_path, class:"btn-violet", method: :get %>
       </div>
-    </div>
   </div>
 </div>
