--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,14 @@
   <div class="home-container">
     <div class="home-text">
       <p>Take better control of your finances and achieve the savings you so desire!</p>
+      <!-- <p>
+      Tip:
+      <% tips = Tip.all %>
+      <% tip = tips.sample %>
+      <%= tip.title %>:
+      <%= tip.message %>
+      </p> -->
+        <%= image_tag 'credit-card.jpg'  %>
       <!--<img src='images/credit-card.jpg' alt="tarjeta de credito"> -->
     </div>
   </div>
