Edit and new modified

--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,4 +1,9 @@
-<div class="contain-img">
-  <h1 class="my-5">Oferta tus productos aquí:</h1>
-  <%= render "shared/account_form" %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-6 mt-5 text-center">
+      <h1>New Account</h1>
+    </div>
+  </div>
 </div>
+
+<%= render "shared/account_form" %>
