--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,1 +1,9 @@
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-6 mt-5 text-center">
+      <h1>New Category</h1>
+    </div>
+  </div>
+</div>
+
 <%= render "shared/category_form" %>
