--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -1,1 +1,8 @@
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-6 mt-5 text-center">
+      <h1>New Transaction</h1>
+    </div>
+  </div>
+</div>
 <%= render "shared/transactions_form" %>
