--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,9 +5,10 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  position: sticky;
-  bottom: 0;
   width: 100%;
+  left: 0;
+  bottom: 0;
+  position: fixed;
 }
 
 .message {
