--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,10 @@
 <h1><%= @user.full_name %></h1>
-<h2>aquí estoy</h2>
-<% @user.accounts.each do |a| %>
-<%= a.name %>
-<% end %>
-
-<% @user.categories.each do |c| %>
-<%= c.name %>
-<% end %>
-
-<% @user.transactions.each do |t| %>
-<%= t.reason %>
-<% end %>
+<div class="card-account-container">
+  <% @user.accounts.each do |a| %>
+    <div class="card-account">
+      <%= a.name %>
+      <p>Balance:</p>
+      <%= a.amount %>
+    </div>
+  <% end %>
+</div>
