Fixing errors with full_name attribute

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,7 +22,7 @@
                       required: true,
                       input_html: { autocomplete: "new-password" } %>
           <%= f.input :full_name,
-                      autofocus: true
+                      autofocus: true,
                       required: true,
                       input_html: { autocomplete: "full-name" } %>
         </div>
