--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,8 @@
   <div class="home-container">
     <div class="home-text">
       <% if user_signed_in? %>
-        <h1>aquí va el dashboar</h1>
+        <h1>HOME</h1>
+
         <!-- <p>
         Tip:
         <% tips = Tip.all %>
@@ -10,9 +11,25 @@
         <%= tip.title %>:
         <%= tip.message %>
         </p> -->
-        <div class="bg-light">
-          <%= column_chart Account.group(:name).count %>
-          <%= column_chart Transaction.group(:date).count %>
+        <%= link_to "Chart Selector", "#", class: "btn-violet", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+        <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+          <%= link_to "Action", "#" %>
+          <%= link_to "Another action", "#", class: "dropdown-item" %>
+        </div>
+        <div>
+          <select name="select" id="chart-selector">
+            <option selected>Chart Selector</option>
+            <option value="barras">Graficos de barras</option>
+            <option value="otros">otros graficos</option>
+          </select>
+
+        </div>
+        <div id="charts">
+          <%= column_chart current_user.accounts.group(:name).sum(:amount) %>
+          <%= column_chart current_user.transactions.group_by_day(:date).sum(:amount) %>
+          <%= line_chart current_user.transactions.group(:account_id).group_by_day(:date).sum(:amount) %>
+          <%= pie_chart current_user.transactions.joins(:category).group(:name).sum(:amount), legend: false %>
+          <%= bar_chart current_user.accounts.group(:name).sum(:amount), empty: "No data", colors: ["#C5A5CF"], adapter: "google",  library: { backgroundColor: "#2D4054", dataset: {borderWidth: 10, fillColor: "#ffffff"}, vAxis: { baselineColor: "#ffffff", gridlines: {Color: "" }, textStyle: { color: "#ffffff"}, titleTextStyle: {color: "#ffffff"} }, hAxis: { baselineColor: "#ffffff" , gridlines: {Color: "" }, textStyle: { color: "#ffffff"} , titleTextStyle: {color: "#ffffff"} } }  %>
         </div>
       <% else %>
         <p>Take better control of your finances and achieve the savings you so desire!</p>
