--- a/app/views/shared/_transactions_form.html.erb
+++ b/app/views/shared/_transactions_form.html.erb
@@ -2,7 +2,7 @@
   <div class="row justify-content-center">
     <div class="col-6 form-container ">
       <%= simple_form_for @transaction do |f| %>
-        <%= f.input :transaction_type, placeholder: "Transaction's Type", collection: Transaction.transaction_types.symbolize_keys.keys %>
+        <%= f.input :transaction_type, placeholder: "Transaction's Type", collection: current_user.transactions.transaction_types.symbolize_keys.keys %>
         <%= f.input :reason, placeholder: "Reason of payment" %>
         <%= f.input :date, placeholder: "Date", html5: true %>
         <%= f.input :amount, placeholder: "Add Amount" %>
