--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,13 @@
 <div class="banner">
-  <div class="home-container">
-    <div class="home-text">
+  <div class="home-container row">
+
+    <div class="home-text col-sm-12 col-lg-6 ">
+      <p>Take better control of your finances and achieve the savings you so desire!</p>
+    </div>
+    <div class= "home-image col-sm-12 col-lg-6">
+      <%= image_tag 'credit-card.jpg'  %>
+    </div>
       <% if user_signed_in? %>
-        <h1>aquí va el dashboar</h1>
         <!-- <p>
         Tip:
         <% tips = Tip.all %>
@@ -10,15 +15,13 @@
         <%= tip.title %>:
         <%= tip.message %>
         </p> -->
+
+        <!--
         <div class="bg-light">
           <%= column_chart Account.group(:name).count %>
           <%= column_chart Transaction.group(:date).count %>
         </div>
-      <% else %>
-        <p>Take better control of your finances and achieve the savings you so desire!</p>
-        <%= image_tag 'credit-card.jpg'  %>
-        <!--<img src='images/credit-card.jpg' alt="tarjeta de credito"> -->
-      </div>
+        -->
     </div>
   <% end %>
       <!-- <% if user_signed_in? %>
