--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,19 +15,12 @@
               <%= link_to "Home", "/", class: "nav-link" %>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/accounts">Accounts</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/categories">Categories</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/transactions">Transactions</a>
+              <%= link_to "Categories", "/categories", class: "nav-link" %>
             </li>
             <li class="nav-item dropdown">
               <%= image_tag "https://cdn-icons-png.flaticon.com/512/4675/4675250.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
               <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown" id="NavBox">
-                <%= link_to "Action", "#", class: "dropdown-item" %>
-                <%= link_to "Another action", "#", class: "dropdown-item" %>
+                <%= link_to "My Profile", profile_path(current_user), class: "dropdown-item" %>
                 <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
               </div>
             </li>
