--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,3 +10,14 @@
     <% end %>
   </div>
 </div>
+
+<div class= "dashboard-info row">
+  <div class= "chart-transaction row col-8">
+    <div class= "chart col-12">
+    </div>
+    <div class= "transactions col-12">
+    </div>
+  </div>
+  <div class= "balances col-4">
+  </div>
+</div>
