--- a/app/assets/stylesheets/components/_card-account.scss
+++ b/app/assets/stylesheets/components/_card-account.scss
@@ -1,13 +1,15 @@
 .overflow-cards {
-  width: 500px;
+  width: 80%;
   scrollbar-base-color: aqua;
 }
 
 .card-account-container {
   display: grid;
-  grid-template-columns: repeat(4, 230px);
-  grid-template-rows: 150px;
-  column-gap: 30px;
+  grid-gap: 16px;
+  padding: 16px;
+  grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+  grid-auto-flow: column;
+  grid-auto-columns: minmax(250px,1fr);
   overflow-x: auto;
 }
 
@@ -15,4 +17,8 @@
   background: linear-gradient(180deg, rgba(195, 153, 242, 0.82) 0%, rgba(217, 217, 217, 0.15) 100%);  margin: 20px;
   justify-content: space-between;
   align-items: center;
+  height: 150px;
+  border-radius: 10px;
+  padding: 15px;
+
 }
