--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @user.full_name %></h1>
-<div class="overflow-cards">
-  <div class="card-account-container">
+<div class="overflow-cards grid">
+  <div class="card-account-container g-col-12">
     <% @user.accounts.each do |a| %>
       <div class="card-account">
         <%= a.name %>
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<div class= "dashboard-info row">
+<div class= "dashboard-info row mt-5">
   <div class= "chart-transaction row col-8">
     <div class= "chart col-12">
     </div>
