--- a/app/assets/stylesheets/components/_card-account.scss
+++ b/app/assets/stylesheets/components/_card-account.scss
@@ -21,3 +21,25 @@
   padding: 15px;
 
 }
+.card-account-container::-webkit-scrollbar {
+  width: 10px !important;
+  height: 9px;
+  background-color: $blue;
+}
+
+/* Track */
+.card-account-container::-webkit-scrollbar-track {
+  background: rgba(45,64,84, 0.3);
+  border-radius: 10px;
+}
+
+/* Handle */
+.card-account-container::-webkit-scrollbar-thumb {
+  background: rgba(250, 250, 250, 0.8);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.card-account-container::-webkit-scrollbar-thumb:hover {
+  background: rgba(250, 250, 250, 0.65);
+}
