--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -22,11 +22,23 @@
   height: 250px;
 }
 
-.container {
+.dashboard-container {
   display: grid;
-  grid-template-columns: 95% 5%;
+  grid-template-columns: 90% 10%;
+}
+
+.new-account {
+  align-items: center !important;
+  display: flex;
 }
 
 .new-account i{
   color: white;
+  &:hover {
+    color: rgba(250, 250, 250, 0.8);
+    transition: 400ms;
+  }
+  &:active {
+    color: white;
+  }
 }
