--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -1,3 +1,8 @@
+.dashboard-title {
+  margin: 30px 20px 20px 30px;
+  padding-left: 31px;
+}
+
 .chart-transaction {
   background-color: aliceblue;
   border: 1px solid white;
@@ -24,7 +29,7 @@
 
 .dashboard-container {
   display: grid;
-  grid-template-columns: 90% 10%;
+  grid-template-columns: 85% 15%;
 }
 
 .new-account {
@@ -37,8 +42,13 @@
   &:hover {
     color: rgba(250, 250, 250, 0.8);
     transition: 400ms;
+    cursor: pointer;
   }
   &:active {
     color: white;
   }
+}
+
+.dashboard-info {
+  margin: 30px;
 }
