--- a/app/assets/stylesheets/components/_form-container.scss
+++ b/app/assets/stylesheets/components/_form-container.scss
@@ -5,6 +5,5 @@
   border-radius: 20px !important;
   padding: 60px;
   color: black;
-  margin-bottom: 50px;
-  margin-top: 50px;
+  margin: 20px auto;
 }
