--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @user.full_name %></h1>
+<h1 class="dashboard-title"><%= @user.full_name %></h1>
 <div class="dashboard-container row ">
   <div class="overflow-cards grid col-8 ">
     <div class="card-account-container g-col-12">
@@ -12,12 +12,9 @@
     </div>
   </div>
   <div class="new-account text-center col-4">
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#loginModal">
-        <i class="fa-solid fa-circle-plus fa-3x" ></i>
-    </button>
+    <i class="fa-solid fa-circle-plus fa-3x" data-bs-toggle="modal" data-bs-target="#newAccountModal"></i>
     <%= render 'accounts/modal_new' %>
   </div>
-
 </div>
 
 <div class= "dashboard-info row mt-5">
