--- a/app/assets/stylesheets/components/_dashboard.scss
+++ b/app/assets/stylesheets/components/_dashboard.scss
@@ -3,31 +3,25 @@
   padding-left: 31px;
 }
 
-.chart-transaction {
-  background-color: aliceblue;
-  border: 1px solid white;
-  height: 500px
-}
-
 .chart {
-  background-color: red ;
-  border: 1 solid white;
-  height: 250px;
+  background-color: $blue;
+  border: 1px solid white;
+  border-radius: 20px;
 }
 
-.balances {
-  background-color: rgb(255, 0, 157);
-  border-radius: 1 solid white;
-  height: 500px;
+  .balances {
+  background-color: $blue;
+  border: 1px solid white;
+  border-radius: 20px;
 }
 
 .transactions {
-  background-color: purple;
-  border-radius: 1 solid white;
-  height: 250px;
+  background-color: $blue;
+  border: 1px solid white;
+  border-radius: 20px;
 }
 
-.dashboard-container {
+.dashboard-account-container {
   display: grid;
   grid-template-columns: 85% 15%;
 }
@@ -50,5 +44,16 @@
 }
 
 .dashboard-info {
-  margin: 30px;
+  margin: 50px;
+  display: grid;
+  grid-template-columns: 900px 400px;
+  grid-template-rows: 700px;
+  grid-gap: 40px;
+}
+
+.chart-transaction {
+  display: grid;
+  grid-template-columns: 850px;
+  grid-template-rows: repeat(2, 300px);
+  grid-gap: 40px;
 }
