Adding Nav Icon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>BudgetApp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%# <link rel="icon" type="image/png" href="../logo2.png"> %>
+    <%= favicon_link_tag asset_path('image.png') %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
