--- a/app/views/accounts/new.html.erb
+++ b/app/views/accounts/new.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-6 mt-5 text-center">
-      <h1>Edit Transaction</h1>
+      <h1>New Account</h1>
     </div>
   </div>
 </div>
 
-<%= render "shared/transactions_form", transaction: @transaction %>
+<%= render "shared/account_form" %>
