Adding a credit card in the home page

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,5 +1,6 @@
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Acme&family=Josefin+Sans:wght@300&family=Maven+Pro:wght@400;600&family=Nunito&display=swap');
 
 // Define fonts for body and headers
 $body-font: 'Montserrat', sans-serif;
