--- a/app/assets/stylesheets/components/_home-container.scss
+++ b/app/assets/stylesheets/components/_home-container.scss
@@ -13,9 +13,8 @@
   line-height: 71px;
 }
 
-.home-image img {
-  margin: auto;
-  align-items: center;
-  text-align: center;
-  width: 90%;
+.home-image {
+  font-family: "Josefin Sans", sans-serif;
+  height: 700px;
+  width: 700px;
 }
