--- a/app/assets/stylesheets/components/_card-account.scss
+++ b/app/assets/stylesheets/components/_card-account.scss
@@ -45,3 +45,10 @@
 .card-account-container::-webkit-scrollbar-thumb:hover {
   background: rgba(250, 250, 250, 0.65);
 }
+
+.balance {
+  background: linear-gradient(rgba(248, 248, 248, 0.8) 0%, rgba(119, 131, 144, 0.291257) 52.14%);
+  width: 300px;
+  margin: 50px;
+  padding: 20px;
+}
